text in board now scales correctly on mobile

--- a/style.css
+++ b/style.css
@@ -98,4 +98,8 @@
         font-size: 3.4vw;
         line-height: 2.8em;
     }
+
+    .square {
+        font-size: 4vw;
+    }
 }
